icl: disable all tex-miplevel tests
They continue to be flaky

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -2,34 +2,157 @@ piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
 piglit.spec.arb_compute_shader.execution.shared-atomicmax-uint
 piglit.spec.arb_texture_cube_map.copyteximage cube samples=16
 piglit.spec.ext_transform_feedback.max-varyings
-piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() 2d
-piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() 3d
-piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() cube
-piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 2d
-piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 2d_projvec4
-piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darray
-piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2drectshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() cube
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() cubearray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() cubearrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() cubeshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 1darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 2darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) cube
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) cubearray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture(bias) cubeshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 1darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 2darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 2darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 2drectshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad cube
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad cubearray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegrad cubeshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1darrayshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 2darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 2darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 2drectshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 1darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 2darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod cube
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelod cubearray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 1darrayshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 2darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1darrayshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2drectshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 1darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 2darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 1d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2drect_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2drectshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj(bias) 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj(bias) 1d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj(bias) 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj(bias) 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj(bias) 2d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj(bias) 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj(bias) 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 1d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 2d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 2drect_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 2drectshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgrad 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1d_projvec4
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 2d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 2drect_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 2drectshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlod 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlod 1d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlod 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlod 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlod 2d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlod 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlod 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 1d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2d_projvec4
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1d_projvec4
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2d_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2drect
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2drect_projvec4
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2drectshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1d_projvec4
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 2d_projvec4
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 3d
