piglit: disable flatshading on skl
passes on HD530, fails on HD520.  All are sklgt2

--- a/piglit-test/skl_blacklist.conf
+++ b/piglit-test/skl_blacklist.conf
@@ -1,1 +1,3 @@
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj(bias) 1d
+# passes on HD530, fails on HD520.  All are sklgt2
+piglit.spec.arb_provoking_vertex.arb-provoking-vertex-clipped-geometry-flatshading
