icl: add to blacklist

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -2,6 +2,8 @@ piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
 piglit.spec.arb_compute_shader.execution.shared-atomicmax-uint
 piglit.spec.arb_texture_cube_map.copyteximage cube samples=16
 piglit.spec.ext_transform_feedback.max-varyings
+piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() 3d
+piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darrayshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1dshadow
