piglit: drop broken 32bit tests
There is no sense in tracking 32bit build separately when the root
cause is a bug in the test suite.

--- a/piglit-test/m32_blacklist.conf
+++ b/piglit-test/m32_blacklist.conf
@@ -1,3 +1,7 @@
 # bug 93542
 piglit.spec.arb_tessellation_shader.execution.quads
 piglit.spec.arb_tessellation_shader.execution.tess_with_geometry
+# bug 104971
+piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-packunorm2x16
+piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-packunorm4x8
+piglit.spec.glsl-es-3_00.execution.built-in-functions.const-packunorm2x16
