piglit: drop 32-bit specific failures that are tracked in bugzilla

--- a/piglit-test/m32_blacklist.conf
+++ b/piglit-test/m32_blacklist.conf
@@ -5,3 +5,7 @@ piglit.spec.arb_tessellation_shader.execution.tess_with_geometry
 piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-packunorm2x16
 piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-packunorm4x8
 piglit.spec.glsl-es-3_00.execution.built-in-functions.const-packunorm2x16
+# bug 107677
+piglit.spec.intel_shader_atomic_float_minmax.execution.ssbo-atomiccompswap-float-negative-zero
+piglit.spec.intel_shader_atomic_float_minmax.execution.ssbo-atomicmax-float-nan
+piglit.spec.intel_shader_atomic_float_minmax.execution.ssbo-atomicmin-float-nan
