debian installer: Changes for installing Debian on Chromebooks

--- a/debian_installer/jenkins.cfg
+++ b/debian_installer/jenkins.cfg
@@ -56,7 +56,7 @@ d-i clock-setup/ntp-server string 10.7.196.55
 d-i partman/early_command string umount /media || true
 
 # Configure hard disks
-d-i partman-auto/disk string /dev/<disk>
+d-i partman-auto/disk string /dev/mmcblk0
 # No lvm or md
 d-i partman-auto/method string regular
 # force removal of lvm and md devices
@@ -71,6 +71,9 @@ d-i partman/confirm_nooverwrite boolean true
 
 # Use a single partition (or two if using UEFI)
 d-i partman-auto/choose_recipe select atomic
+
+# No swap
+d-i partman-basicfilesystems partman-basicfilesystems/no_swap boolean false
 
 # Use UUID's to mount drives
 d-i partman/mount_style select uuid
@@ -87,7 +90,7 @@ d-i pkgsel/update-policy select none
 
 # Install grub automatically to <disk>
 d-i grub-installer/only_debian boolean true
-d-i grub-installer/bootdev string /dev/<disk>
+d-i grub-installer/bootdev string /dev/mmcblk0
 
 # Install avahi-daemon
 # Note: Salt is not installed here because it is no longer in the debian repo..
